  * link rel="Alternate" links: rather use page.url than request.href, so
    url_prefix_action gets used for the (print and raw) action URLs
  * fixed wrong detection of UI language from accept-language header for not
    logged-in users if the language identifier there was (partially) uppercase.
  * fix Python 2.7.4/5 compatibility issue with rss_rc action using handler._out

  Other changes:
  * rss_rc action (RSS feed) is now much faster / much less resource consuming
    when requested for a specific single page. As we have a link to this in
    every page's html output, this likely also lightens the load caused by bots
    and search engine crawlers.

Version 1.9.7:
  New features:
  * passlib support - enhanced password hash security. Special thanks go to
    the Python Software Foundation (PSF) for sponsoring development of this!

    Docs for passlib: http://packages.python.org/passlib/

    If cfg.passlib_support is True (default), we try to import passlib and set
    it up using the configuration given in cfg.passlib_crypt_context (default
    is to use sha512_crypt with default configuration from passlib).

    The passlib docs recommend 3 hashing schemes that have good security, but
    some of them have additional requirements:
    sha512_crypt needs passlib >= 1.3.0, no other requirements.
    pbkdf2_sha512 needs passlib >= 1.4.0, no other requirements.
    bcrypt has additional binary/compiled package requirements, please refer to
    the passlib docs.

    cfg.password_scheme should be '{PASSLIB}' (default) to tell that passlib is
    wanted for new password hash creation and also for upgrading existing
    password hashes.

    For the moin code as distributed in our download release archive, passlib
    support should just work, as we have passlib 1.6.1 bundled with MoinMoin
    as MoinMoin/support/passlib. If you use some other moin package, please
    first check if you have moin AND passlib installed (and also find out the